--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
   </div>
 
 
+<div class="container">
+  <h2> Topics </h2>
 
 <div class="cards">
 
@@ -40,6 +42,11 @@
   </div>
 
 </div>
+
+</div>
+
+
+<div class="typeform-widget" data-url="https://marinefournet.typeform.com/to/mU6zly" style="width: 100%; height: 500px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script> <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"> powered by <a href="https://admin.typeform.com/signup?utm_campaign=mU6zly&utm_source=typeform.com-01E19DR5FN6XJFXT1WEM7JY3SY-free&utm_medium=typeform&utm_content=typeform-embedded-poweredbytypeform&utm_term=EN" style="color: #999" target="_blank">Typeform</a> </div>
 
 
 </body>
